--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,22 @@ jobs:
       - name: Checkout  ️ 
         uses: actions/checkout@v3
 
-      - name: Install and Build   # 安装依赖、打包，如果提前已打包好无需这一步
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+      
+      - name: Set node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: pnpm
+
+      - name: Install dependencies
         run: |
-          npm install
-          npm run build
+           pnpm install
+      - name: Build
+        run: npm run build
           
       - name: Release
         uses: google-github-actions/release-please-action@v3
