--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_PRO_HOST = 'http://43.142.90.39:11112'
-VUE_DEV_HOST = 'http://127.0.0.1:3000'
+VUE_APP_PRO_HOST = 'http://43.142.90.39:11112'
+VUE_APP_DEV_HOST = 'http://127.0.0.1:3000'
