--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/polyfill": "^7.12.1",
+    "@sentry/vue": "^7.54.0",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
