--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "postcss-pxtorem": "^5.1.1",
+    "typescript": "^5.1.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
