--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -43,31 +44,50 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
+    "eslint-config-hfex": "^1.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "hfex-prettier-config": "^1.0.0",
+    "hfex-stylelint-config": "^1.1.0",
+    "husky": "^8.0.3",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "lint-staged": "^13.2.2",
     "postcss-pxtorem": "^5.1.1",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.7.0",
     "typescript": "^5.1.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
-    "env": {
-      "node": true
-    },
     "extends": [
-      "plugin:vue/essential",
-      "@vue/standard"
+      "hfex"
+    ]
+  },
+  "stylelint": {
+    "extends": [
+      "hfex-stylelint-config/src/rules/vue"
+    ]
+  },
+  "prettier": "hfex-prettier-config",
+  "lint-staged": {
+    "**/src/**/*.{js,json,vue,jsx,tsx}": [
+      "eslint --fix",
+      "git add"
     ],
-    "parserOptions": {
-      "ecmaVersion": 2020
-    },
-    "rules": {}
+    "**/src/**/*.{html,vue,scss,css,less}": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "**/src/**/*.{js,vue,scss,css,less,json,ts}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "browserslist": [
     "> 1%",
