--- a/package.json
+++ b/package.json
@@ -44,13 +44,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^8.41.0",
+    "eslint": "8.39.0",
     "eslint-config-hfex": "^1.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
     "hfex-prettier-config": "^1.0.0",
     "hfex-stylelint-config": "^1.1.0",
     "husky": "^8.0.3",
@@ -84,7 +79,7 @@
       "stylelint --fix",
       "git add"
     ],
-    "**/src/**/*.{js,vue,scss,css,less,json,ts}": [
+    "**/src/**/*.{js,vue,scss,css,less,json}": [
       "prettier --write",
       "git add"
     ]
