--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "wl-pinyin": "^1.0.1"
   },
   "devDependencies": {
+    "@sentry/cli": "^2.18.1",
+    "@sentry/webpack-plugin": "^2.2.2",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
