--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "prettier": "^2.8.8",
     "stylelint": "^15.7.0",
     "typescript": "^5.1.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-delete-sourcemaps-plugin": "^1.3.1"
   },
   "eslintConfig": {
     "root": true,
